# ASIA

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml  start.sh
.nwave/: des-config.json
Questionari/: parte-1-pre-demo.md  parte-2-post-demo.md  parte-3-commitment-test.md
backend/: Dockerfile  pyproject.toml
backend/asia/: __init__.py  main.py
backend/asia/adapters/: groq_provider.py  in_memory_case_repository.py  pg_paper_repository.py  pubmed_fetcher.py  semantic_scholar_fetcher.py  sentence_transformer_embedder.py
backend/asia/api/: dependencies.py
backend/asia/api/middleware/: error_handler.py
backend/asia/api/routes/: cases.py  explain_paper.py  metadata.py  query.py
backend/asia/config/: pre_loaded_queries.py  settings.py
backend/asia/domain/: context_injection.py  evidence_scoring.py  models.py  query_types.py
backend/asia/ports/: case_repository.py  embedding_provider.py  llm_provider.py  paper_repository.py
backend/asia/services/: case_service.py  citation_verifier.py  ingestion_service.py  paper_explainer.py  rag_pipeline.py  synthesis_generator.py
backend/db/migrations/: 001_initial_schema.sql
backend/db/seeds/: pubmed_carcinoma_papers.json  pubmed_hypercalcemia_papers.json  run_seed.py  seed_papers.py
docs/: brainstorm.md  market-research.md  mvp.md  vision.md
docs/adrs/: ADR-001-llm-adapter-pattern.md  ADR-002-self-reflective-rag.md  ADR-003-groq-mvp-llm-provider.md  ADR-004-modular-monolith.md  (+2 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
tests/: test_infrastructure.py
(+78 files in other folders)
