[project]
name = "asia"
version = "0.1.0"
description = "ASIA - AI-powered Scientific Information Assistant for veterinary oncology"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "sentence-transformers>=3.3.0",
    "groq>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
    "anyio[trio]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
